# mypy

./: .gitignore  README.md  pyproject.toml
src/mypy_utils/: hello_world.py
