[project]
name = "mypy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cartopy>=0.24.1",
    "cfgrib>=0.9.15.0",
    "dask>=2025.3.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "netcdf4>=1.7.2",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pymc>=5.21.1",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "xarray>=2025.3.0",
]
